# Spark_Http_Service

./: .gitignore  CMakeLists.txt  README.md  config.json
sdk/Spark2.0_Linux_SDK_v1.0/include/: sc_error.h  sc_memory.h  sc_type.h
src/: srv_spark.cpp
